<resources>
    <string name="app_name">PetLog</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="pwcheck">비밀번호 확인</string>
    <string name="signup">회원가입</string>
    <string name="makeaccount">계정 생성하기</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="birthday">생년월일</string>
    <string name="Diary">Diary</string>
    <string name="petsta">펫스타그램</string>
    <string name="mypet">MyPet</string>
    <string name="talk">Talk Talk</string>
    <string name="sudone">가입하기</string>
    <string name="findpw">비밀번호 찾기</string>
</resources>
